添加了光标变化，背景透明，以及tmux的配置

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",*256col*:Tc"
 set -g history-limit 65535
 set -g base-index 1
 set -g pane-base-index 1
@@ -13,9 +13,21 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 
+# status
+set -g status-bg default
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(/usr/local/share/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(/usr/local/share/tmux-powerline/powerline.sh right)"
+set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]#[fg=colour255, bg=colour60] #I #W #[fg=colour27, bg=colour235]"
+
 setw -g mode-keys vi
 
 # 更新配置文件
 bind r source-file ~/.tmux.conf \; display "已更新"
 
-
+# 减少esc延迟
+set -s escape-time 0
