--- a/tmux.conf
+++ b/tmux.conf
@@ -14,11 +14,11 @@ bind-key h select-pane -L
 bind-key l select-pane -R
 
 # status
-set -g status-bg default
+set-option -g status-style fg=white,bg=default,default
 set-option -g status on
 set-option -g status-interval 2
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
+set-option -g status-justify "right"
+set-option -g status-left-length 120
 set-option -g status-right-length 90
 set-option -g status-left "#(/usr/local/share/tmux-powerline/powerline.sh left)"
 set-option -g status-right "#(/usr/local/share/tmux-powerline/powerline.sh right)"
