--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,11 @@ bind-key k select-pane -U
 bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
+# 鼠标
+setw -g mouse-resize-pane on
+setw -g mouse-select-pane on
+setw -g mouse-select-window on
+setw -g mode-mouse on
 
 # status
 set-option -g status-style fg=white,bg=default,default
@@ -28,6 +33,9 @@ setw -g mode-keys vi
 
 # 更新配置文件
 bind r source-file ~/.tmux.conf \; display "已更新"
+
+# alias
+set -s command-alias[10] sync-panes='set synchronize-panes'
 
 # 减少esc延迟
 set -s escape-time 0
