修改一些快捷键

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,11 +12,6 @@ bind-key k select-pane -U
 bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
-# 鼠标
-setw -g mouse-resize-pane on
-setw -g mouse-select-pane on
-setw -g mouse-select-window on
-setw -g mode-mouse on
 
 # status
 set-option -g status-style fg=white,bg=default,default
@@ -36,6 +31,12 @@ bind r source-file ~/.tmux.conf \; display "已更新"
 
 # alias
 set -s command-alias[10] sync-panes='set synchronize-panes'
+bind-key s sync-panes
 
 # 减少esc延迟
 set -s escape-time 0
+
+# v and y like vi in copy-mode
+bind-key -Tcopy-mode-vi 'C-v' send -X begin-selection \; send -X rectangle-toggle
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
