update some configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,9 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 
+# rename window
+#bind-key . rename-window
+
 # status
 set-option -g status-style fg=white,bg=default,default
 set-option -g status on
@@ -32,11 +35,27 @@ bind r source-file ~/.tmux.conf \; display "已更新"
 # alias
 set -s command-alias[10] sync-panes='set synchronize-panes'
 bind-key s sync-panes
+bind-key . command-prompt -I "#W" "rename-window '%%'"
 
 # 减少esc延迟
 set -s escape-time 0
 
 # v and y like vi in copy-mode
-bind-key -Tcopy-mode-vi 'C-v' send -X begin-selection \; send -X rectangle-toggle
+bind-key -T copy-mode-vi 'C-v' send -X begin-selection \; send -X rectangle-toggle
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
+# set the word separators to get closer to vim's
+set-option -g word-separators " -()@.,[]{}:="
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'IngoMeyer441/tmux-easy-motion'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# shortcuts of easy motion
+set -g @easy-motion-prefix ","
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
