--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "screen-256color"
+set-option -g default-command bash
 set -ga terminal-overrides ",*256col*:Tc"
 set -g history-limit 65535
 set -g base-index 1
