update some configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,17 +5,9 @@ set -g history-limit 65535
 set -g base-index 1
 set -g pane-base-index 1
 set-option -g prefix C-n
-bind - splitw -v
-unbind %
-bind | splitw -h
-# 选中窗口
-bind-key k select-pane -U
-bind-key j select-pane -D
-bind-key h select-pane -L
-bind-key l select-pane -R
 
-# rename window
-#bind-key . rename-window
+# 更新配置文件
+bind r source-file ~/.tmux.conf \; display "已更新"
 
 # status
 set-option -g status-style fg=white,bg=default,default
@@ -30,13 +22,21 @@ set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]#
 
 setw -g mode-keys vi
 
-# 更新配置文件
-bind r source-file ~/.tmux.conf \; display "已更新"
+# windows
+bind-key . command-prompt -I "#W" "rename-window '%%'"
 
-# alias
+# panes
+bind - splitw -v
+unbind %
+bind | splitw -h
 set -s command-alias[10] sync-panes='set synchronize-panes'
 bind-key s sync-panes
-bind-key . command-prompt -I "#W" "rename-window '%%'"
+set-option -g display-panes-time 2000
+# selections
+bind-key k select-pane -U
+bind-key j select-pane -D
+bind-key h select-pane -L
+bind-key l select-pane -R
 
 # 减少esc延迟
 set -s escape-time 0
@@ -54,6 +54,14 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'IngoMeyer441/tmux-easy-motion'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# The configurations of plugins tmux-resurrect and tmux-continuum
+# default restore programs: vi vim nvim emacs man less more tail top htop irssi weechat mutt
+# additional restore program
+set -g @resurrect-processes 'ssh'
+# Restore pane contents, make sure $(tmux show -g default-command) do not contain && or || operators
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
 # shortcuts of easy motion
 set -g @easy-motion-prefix ","
